--- a/my-action/action.yml
+++ b/my-action/action.yml
@@ -1,9 +1,17 @@
-name: 'Echo Message'
-description: 'Echoes a user-provided message'
 inputs:
-  message:
-    description: 'Message to echo'
+  username:
+    description: 'Username to look up'
     required: true
 runs:
-  using: 'node16'
+  using: 'node20'
   main: 'dist/index.js'
+
+# name: 'Echo Message'
+# description: 'Echoes a user-provided message'
+# inputs:
+#   message:
+#     description: 'Message to echo'
+#     required: true
+# runs:
+#   using: 'node16'
+#   main: 'dist/index.js'
